[package]
name = "heatgen"
version = "0.1.0"
authors = ["Eshin Kunishima <ek@esh.ink>"]
edition = "2018"
repository = "https://github.com/mikoim/heatgen/"
license = "MIT"

[dependencies]
csv = "1.1.4"
image = "0.23.12"
ndarray = { version = "0.13.1", features = ["serde", "rayon"] }
rayon = "1.5.0"
serde = { version = "1.0.117", features = ["derive"] }
